@@ -1,5 +1,5 @@
 /****************************************************************************
- * sched/work_queue.c
+ * sched/work_thread.c
  *
  *   Copyright (C) 2009 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
@@ -40,15 +40,17 @@
 #include <nuttx/config.h>
 #include <sys/types.h>
 
+#include <unistd.h>
 #include <queue.h>
 #include <assert.h>
 #include <errno.h>
 #include <debug.h>
 
 #include <nuttx/arch.h>
-#include <nuttx/clock.h>
 #include <nuttx/wqueue.h>
+#include <nuttx/clock.h>
 
+#include "os_internal.h"
 #include "work_internal.h"
 
 #ifdef CONFIG_SCHED_WORKQUEUE
@@ -65,6 +67,10 @@
  * Public Variables
  ****************************************************************************/
 
+/* The queue of pending work */
+
+struct dq_queue_s g_work;
+
 /****************************************************************************
  * Private Variables
  ****************************************************************************/
@@ -77,48 +83,84 @@
  * Public Functions
  ****************************************************************************/
 /****************************************************************************
- * Name: work_queue
+ * Name: work_thread
  *
  * Description:
- *   Queue work to be performed at a later time.  All queued work will be
- *   performed on the worker thread of of execution (not the caller's).
+ *   This is the main worker thread that performs actions placed on the work
+ *   list.  It also performs periodic garbage collection (that is performed
+ *   by the idle thread if CONFIG_SCHED_WORKQUEUE is not defined).
  *
  * Input parameters:
- *   work   - The work structure to queue
- *   worker - The worker callback to be invoked.  The callback will invoked
- *            on the worker thread of execution.
- *   arg    - The argument that will be passed to the workder callback when
- *            int is invoked.
- *   delay  - Delay (in clock ticks) from the time queue until the worker
- *            is invoked. Zero means to perform the work immediately.
+ *   argc, argv (not used)
  *
  * Returned Value:
- *   Zero on success, a negated errno on failure
+ *   Does not return
  *
  ****************************************************************************/
 
-int work_queue(struct work_s *work, worker_t worker, FAR void *arg, uint32 delay)
+int work_thread(int argc, char *argv[])
 {
+  volatile FAR struct work_s *work;
   irqstate_t flags;
 
-  DEBUGASSERT(work != NULL);
+  /* Loop forever */
 
-  /* First, initialize the work structure */
+  for (;;)
+    {
+      /* Wait awhile to check the work list.  We will wait here until either
+       * the time elapses or until we are awakened by a signal.
+       */
 
-  work->worker = worker;         /* Work callback */
-  work->arg    = arg;            /* Callback argument */
-  work->delay  = delay;          /* Delay until work performed */
+      usleep(CONFIG_SCHED_WORKPERIOD);
 
-  /* Now, time-tag that entry and put it in the work queue.  This must be
-   * done with interrupts disabled.  This permits this function to be called
-   * from with task logic or interrupt handlers.
-   */
+      /* First, clean-up any delayed memory deallocations */
 
-  flags        = irqsave();
-  work->qtime  = g_system_timer; /* Time work queued */
-  dq_addlast((FAR dq_entry_t *)work, &g_work);
-  work_signal();                 /* Wake up the worker thread */
-  irqrestore(flags);
-  return OK;
+      sched_garbagecollection();
+
+      /* Then process queued work.  We need to keep interrupts disabled while
+       * we process items in the work list.
+       */
+
+      flags = irqsave();
+      work  = (FAR struct work_s *)g_work.head;
+      while (work)
+        {
+           /* Is this work ready?  It is ready if there is no delay or if
+            * the delay has elapsed.
+            */
+
+           if (work->delay == 0 || g_system_timer - work->qtime > work->delay)
+             {
+               /* Remove the work at the head of the list.  And re-enable
+                * interrupts while the work is performed.
+                */
+
+               (void)dq_remfirst(&g_work);
+
+               /* Do the work.  Re-enable interrupts while the work is being
+                * performed... we don't have any idea how long that will take
+                */
+
+               irqrestore(flags);
+               work->worker(work->arg);
+
+               /* Now, unfortunately, since we re-enabled interrupts we have
+                * to start back at the head of the list.
+                */
+
+               flags = irqsave();
+               work  = (FAR struct work_s *)g_work.head;
+             }
+           else
+             {
+               /* This one is not ready, try the next in the list. */
+
+               work = (FAR struct work_s *)work->dq.flink;
+             }
+        }
+      irqrestore(flags);
+    }
+
+  return OK; /* To keep some compilers happy */
 }
 #endif /* CONFIG_SCHED_WORKQUEUE */
