@@ -951,4 +951,9 @@
 	* arch/arm/src/stm32/stm32_gpio.c - Add support for configure an input GPIO
 	  to generate an EXTI interrupt.
 	* config/stm3210e-eval/src/up_buttons.c - Add support for on-board buttons.
+	* include/nuttx/rwbuffer.h -- Add generic support for read-ahead buffering
+	  and write buffering that can be used in any block driver.
+	* include/nuttx/wqueue.h -- Added a generic worker thread that can used to
+	  defer processing from an interrupt to a task.
+
 
